# MoolahModLauncher

./: .eslintrc  .gitignore  README.md  config.js  filewatcher.js  forge.config.js  forge.config.ts  installedlistpopulator.js  installlocators.js  main.js  mod_installer.js  mod_parser.js  mod_updater.js  package-lock.json  package.json  pak-test.js  preload.js  setup_win32.js  tsconfig.eslint.json  tsconfig.json  tsconfig.node.json  updater.js  webpack.main.config.ts  webpack.plugins.ts  webpack.renderer.config.ts  webpack.rules.ts
assets/: index.html  index.js  style.css
pak/: Cargo.toml  index.js  package-lock.json  package.json
pak/src/: lib.rs
providers/: githubreleases.js  modworkshop.js
src/: config.ts  filewatcher.ts  installedlistpopulator.ts  installlocators.ts  main.ts  mod_installer.ts  mod_updater.ts  preload.ts  setup_win32.ts
src/assets/: index.html  index.js  index.ts
src/providers/: githubreleases.ts  modworkshop.ts
src/types/: config.ts  global.d.ts
